NLP TP/texts/robotics/robotics.stackexchange_0000109761.txt
Q:

Catkin_make error when downloading Baxter SDK

Currently following this tutorial (http://wiki.lofarolabs.com/index.php/Baxter_Research_sdk_installation) to download Baxter SDK, when I reach the catkin_make section, i get this error:
Traceback (most recent call last):
File "/home/rawnaa/ros_ws/src/baxter_interface/cfg/HeadActionServer.cfg", line 35, in 
from baxter_interface import settings
File "/home/rawnaa/ros_ws/devel/lib/python3/dist-packages/baxter_interface/init.py", line 34, in 
exec(__fh.read())
File "", line 35, in 
File "/home/rawnaa/ros_ws/src/baxter_interface/src/baxter_interface/robot_enable.py", line 167
except OSError, e:
^
SyntaxError: invalid syntax
make[2]: *** [baxter_interface/CMakeFiles/baxter_interface_gencfg.dir/build.make:144: /home/rawnaa/ros_ws/devel/include/baxter_interface/HeadActionServerConfig.h] Error 1
make[1]: *** [CMakeFiles/Makefile2:2876: baxter_interface/CMakeFiles/baxter_interface_gencfg.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
Invoking "make -j2 -l2" failed
Im using ubuntu 20.04, ROS Noetic.
Not sure how to fix it, please help.
Many thanks

A:

ROS Noetic changed to python 3 as the default version of python.
That error looks like the code that you're running is expecting python 2 style exceptions.
Looking at the tutorial it was written in 2015 for Ubuntu 12.04 or 14.04. at which time python 2 was the default.
To use software that old on a newer platform and version of ROS you will need to do a bunch of code migrations to upgrade the compatibility.

